# csc648-04-fall24-team02

./: .env  .gitignore  CONTRIBUTING.md  README.md  development.md  package-lock.json
.github/: labeler.yml
application/: .env  .gitignore  README.md  docker-compose.yml  package-lock.json  pyproject.toml
application/.copier/: .copier-answers.yml
application/backend/: README.md
application/backend/app/: crud.py  models.py
application/backend/app/api/: main.py
application/backend/app/core/: db.py
application/backend/backend/: settings.py  urls.py
application/frontend/: .gitignore  README.md  biome.json  index.html  log.js  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
application/frontend/public/: Matthew.js  style.css
application/frontend/public/assets/: boot-asset-pack.json  preload-asset-pack.json
application/frontend/src/: App.js  App.tsx  AuthContext.js  index.js  main.tsx  routeTree.gen.ts  theme.tsx  utils.ts  webfontloader.d.ts
application/frontend/src/client/: models.ts  schemas.ts  services.ts
application/frontend/src/components/: NavBar.js
application/frontend/src/context/: AuthContext.js
application/frontend/src/game/: EventBus.ts  PhaserGame.tsx  config.ts  main.ts
application/frontend/tests/: auth.setup.ts  auto-craft.test.ts  auto-mine.test.ts  clickHuman.test.ts  craft.test.ts  login.spec.ts  mine-resource.spec.ts  reset-password.spec.ts  sign-up.spec.ts  user-settings.spec.ts
application/frontend/vite/: config.dev.mjs  config.prod.mjs
application/scripts/: generate-client.sh
(+144 files in other folders)
